Fix issue #15, css width set to auto to preper display login page on mobile

--- a/theme/assets/scss/login.scss
+++ b/theme/assets/scss/login.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: baseline;
     margin: auto;
-    width: 650px;
+    width: auto;
 }
 
 .login-container input[type="text"],
